Removed z-index from main luya container to fix a bug where the modal is hidden below the sidebar

--- a/modules/admin/resources/scss/components/_luya-container.scss
+++ b/modules/admin/resources/scss/components/_luya-container.scss
@@ -28,8 +28,6 @@
 	// Look & Feel
 	background-color: color("grey", "lighten-4");
 
-    z-index: 5;
-
 	transition: 0.25s ease padding-left;
 
 	&.luya-container__main--liveedit-active {
